<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="register">REGISTER</string>
    <string name="login_page_title">Lets get you started!</string>
    <string name="tag_line">Lets get your foot into heaven!</string>
    <string name="continue_">CONTINUE</string>
    <string name="instructions">This app is a technical marvel and any acts of force against it will be met with the wall of fire. so I beg of the. do not make this experience horrible and waste your time. thank you!</string>
    <string name="instructions_title">But before we begin:</string>
    <string name="welcome_title">Welcome</string>
    <string name="size_text">%s: size</string>
    <string name="no_shoes_msg">There are no shoes create one for selling by clicking the floating action button</string>
    <string name="add_new_shoe_content_description">Add new Shoe</string>
    <string name="no_shoes_content_description">no shoes :(</string>
</resources>
