<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--  This is the welcome page .
        This page uses a constraint layout because making this with
        Linear layout will be a terrible idea.
        1. There would multiple margins being used and it would still be
           really hard to center both vertically and horizontaly as I also
           have two other object that need to be on top and button
        2. Its much easier to position with the constraint layout
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".WelcomeFragment">

        <View
            android:id="@+id/wave_decoration2_drawable"
            android:layout_width="0dp"
            android:layout_height="@dimen/wave_height"
            android:background="@drawable/wave_"
            android:rotationY="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_to_right"
            android:text="@string/welcome_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/wave_decoration2_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.354" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_margin"
            android:text="@string/tag_line"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/space_to_right"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="#0099ff"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/continue_"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>