<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".LoginFragment">

        <View
            android:id="@+id/wave_decoration_drawable"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_field"
            style="@style/textFieldStyling"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wave_decoration_drawable"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/wave_decoration2_drawable"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/wave_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_field"
            style="@style/textFieldStyling"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/wave_decoration2_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lets get you started!"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/email_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wave_decoration_drawable"
            app:layout_constraintVertical_bias="0.71" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_bg"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/register_button"
            app:layout_constraintEnd_toStartOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_border"
            android:text="@string/register"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/wave_decoration2_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/password_field"
            app:layout_constraintVertical_bias="0.3" />


        <!--        <View-->
        <!--            android:id="@+id/wave_decoration2_drawable"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:background="@drawable/wave"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <View-->
        <!--            android:id="@+id/wave_decoration_drawable"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:background="@drawable/wave"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/topView" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/title_text"-->
        <!--            android:layout_width="250dp"-->
        <!--            android:layout_height="101dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:text="Lets get you started"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="40dp"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/topView"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/imageView"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/topView"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintVertical_bias="0.51" />-->

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:layout_marginBottom="16dp"-->
        <!--            android:src="@drawable/ic_baseline_person_24"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/topView"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/topView"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/title_text"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintVertical_bias="0.0" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/email_field"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="59dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:drawableStart="@drawable/ic_baseline_email_24"-->
        <!--            android:hint="@string/email"-->
        <!--            android:inputType="textEmailAddress"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            tools:layout_editor_absoluteY="269dp"-->
        <!--            style="@style/textFieldStyling" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/password_field"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="59dp"-->
        <!--            android:ems="10"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:drawableStart="@drawable/ic_baseline_lock_24"-->
        <!--            android:hint="@string/password"-->
        <!--            android:inputType="textPassword"-->
        <!--        style="@style/textFieldStyling"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            tools:layout_editor_absoluteY="362dp"-->
        <!--             />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>